[package]
name = "modius"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.2"
libp2p = { version = "0.54.1", features = ["full"] }
libp2p-stream = "0.2.0-alpha"
serde = { version = "1.0.215", features = ["alloc", "derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full", "sync"] }
